--- a/Smart Attendence System/attentiveness_detection.ipynb
+++ b/Smart Attendence System/attentiveness_detection.ipynb
@@ -45,7 +45,7 @@
         "\n",
         "### Condition\n",
         "\n",
-        "It checks 20 consecutive frames and if the Eye Aspect ratio is lesser than 0.30, Alert is generated.\n",
+        "It checks 20 consecutive frames and if the Eye Aspect ratio is lesser than 0.25, Alert is generated. We further calculate the attendence percentage through the various attentivity insights we generate.\n",
         "\n",
         "#### Relationship\n",
         "\n",
@@ -53,7 +53,15 @@
         "\n",
         "#### Contributors\n",
         "\n",
-        "Team The Bug Stops Here"
+        "[ Team The Bug Stops Here ]\n",
+        "\n",
+        "Gourab Chakraborty\n",
+        "\n",
+        "Divyansh Tripathi\n",
+        "\n",
+        "Yasharth Dubey \n",
+        "\n",
+        "Shresth Bharadia\n"
       ]
     },
     {
@@ -100,7 +108,7 @@
         "colab": {}
       },
       "source": [
-        "thresh = 0.30\n",
+        "thresh = 0.25\n",
         "frame_check = 20\n",
         "detect = dlib.get_frontal_face_detector()\n",
         "predict = dlib.shape_predictor(\"shape_predictor_68_face_landmarks.dat\")"
@@ -132,6 +140,11 @@
       "source": [
         "cap=cv2.VideoCapture(0)\n",
         "flag=0\n",
+        "inattentive_time=0 \n",
+        "lecture_time=time.time() #starts count of lecture time\n",
+        "count_inattentive = 0\n",
+        "count_attentive = 0\n",
+        "print(\"Lecture Running\")\n",
         "while True:\n",
         "\tret, frame=cap.read()\n",
         "\tframe = imutils.resize(frame, width=450)\n",
@@ -139,7 +152,7 @@
         "\tsubjects = detect(gray, 0)\n",
         "\tfor subject in subjects:\n",
         "\t\tshape = predict(gray, subject)\n",
-        "\t\tshape = face_utils.shape_to_np(shape)#converting to NumPy Array\n",
+        "\t\tshape = face_utils.shape_to_np(shape)   #converting to NumPy Array\n",
         "\t\tleftEye = shape[lStart:lEnd]\n",
         "\t\trightEye = shape[rStart:rEnd]\n",
         "\t\tleftEAR = eye_aspect_ratio(leftEye)\n",
@@ -149,22 +162,47 @@
         "\t\trightEyeHull = cv2.convexHull(rightEye)\n",
         "\t\tcv2.drawContours(frame, [leftEyeHull], -1, (0, 255, 0), 1)\n",
         "\t\tcv2.drawContours(frame, [rightEyeHull], -1, (0, 255, 0), 1)\n",
+        "\t\tend=0\n",
+        "\t\t\n",
         "\t\tif ear < thresh:\n",
         "\t\t\tflag += 1\n",
-        "\t\t\t#print (flag)\n",
+        "\t\t\tprint (flag)\n",
+        "\t\t\t\n",
+        "\t\t\tstart=time.time()\n",
         "\t\t\tif flag >= frame_check:\n",
-        "\t\t\t\tcv2.putText(frame, \"****************ALERT!****************\", (10, 30),\n",
+        "\t\t\t\t# calculate time blocks for inattentive time and sum\n",
+        "\t\t\t\t\n",
+        "\t\t\t\tcv2.putText(frame, \"**************ALERT!**************\", (10, 30),\n",
         "\t\t\t\t\tcv2.FONT_HERSHEY_SIMPLEX, 0.7, (0, 0, 255), 2)\n",
-        "\t\t\t\tcv2.putText(frame, \"****************ALERT!****************\", (10,325),\n",
+        "\t\t\t\tcv2.putText(frame, \"**************ALERT!**************\", (10,325),\n",
         "\t\t\t\t\tcv2.FONT_HERSHEY_SIMPLEX, 0.7, (0, 0, 255), 2)\n",
+        "\t\t\tcount_inattentive = count_inattentive + 1  \n",
+        "\n",
+        "\t\t\t\t\n",
+        "\t\t\t\t\n",
         "\t\telse:\n",
         "\t\t\tflag = 0\n",
+        "\t\t\tcount_attentive = count_attentive + 1\n",
         "\tcv2.imshow(\"Frame\", frame)\n",
         "\tkey = cv2.waitKey(1) & 0xFF\n",
         "\tif key == ord(\"q\"):\n",
-        "\t\tcv2.destroyAllWindows()\n",
-        "\t\tcap.release()\n",
-        "\t\tbreak\n"
+        "\t\tbreak\n",
+        "current_time = time.time()\n",
+        "#print(\"Sum is\", count_attentive + count_inattentive)  \n",
+        "lecture_time = current_time - lecture_time   #gives net lecture time, substract inattentive time to get attentive... calculate attentive percentage.\n",
+        "#print(\"div is:\", lecture_time / (count_attentive+ count_inattentive) )\n",
+        "new_div = lecture_time / (count_attentive+ count_inattentive) \n",
+        "attentive_time = count_attentive * new_div\n",
+        "inattentive_time = count_inattentive * new_div\n",
+        "attendence_percentage= ( attentive_time / lecture_time ) * 100\n",
+        "\n",
+        "print(\"**************************Lecture Over*********************\\n\")\n",
+        "print(\"Lecture Time is:\", lecture_time ,\"\\n\")\n",
+        "print(\"Inattentive Time is:\", inattentive_time ,\"\\n\")\n",
+        "print(\"Attentive Time is:\", attentive_time ,\"\\n\")\n",
+        "print(\"Today's attendence is:\", attendence_percentage ,\" % \\n\")\n",
+        "cv2.destroyAllWindows()\n",
+        "cap.stop()"
       ],
       "execution_count": null,
       "outputs": []
